header line fix, nav spacing fix, social box fixformat

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,10 @@ header {
 	background-color: #fff;
 	border-color: #ccc;
 	height: 65px;
-	margin-bottom: 25px;
 }
 
 nav {
 	height: 65px;
-	margin-bottom: 25px;
 	float: right;
 }
 
@@ -57,7 +55,12 @@ footer {
 	position: relative;
 	width: 960px;
 	margin: 0 auto;
+}
+
+.header-line {
 	border-bottom: 4px solid #ccc;
+	margin-bottom: 30px;
+	clear: both;
 }
 
 .name-box {
@@ -73,7 +76,7 @@ footer {
 .nav-box {
 	display: inline-block;
 	height: 65px;
-	margin-bottom: 25px;
+	margin-right: 15px;
 	float: right;
 	text-align: center;
 	line-height: 65px;
@@ -83,7 +86,7 @@ footer {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
 	text-decoration: none;
-	margin: 0 25px;
+	margin: 0px 15px 0px 15px;
 }
 
 .container {
@@ -104,7 +107,7 @@ footer {
 .heading-line-h3 {
 	border-bottom: 2px solid #ddd;
 	width: 81%;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
 	margin-left: 20px;
 }
 
@@ -129,7 +132,7 @@ footer {
 }
 
 .social-box {
-	margin: 30px 0 30px 5px;
+	margin: 0px 0 30px 5px;
 }
 
 .social-icon {
